k8s/01-jaeger.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: dev
spec:
  selector:
    app: jaeger
  ports:
    - port: 4318
      targetPort: 4318
      protocol: TCP
      name: tcp
    - port: 16686
      targetPort: 16686
      protocol: TCP
      nodePort: 30001
      name: ui
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-deployment
  namespace: dev
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      name: jaeger
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger-ctr
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 4318
              protocol: TCP
            - containerPort: 16686
              protocol: TCP
              name: ui
