k8s/05-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: dev
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30005
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
        collect_logs: "promtail"

    spec:
      containers:
        - name: api-gateway-ctr
          image: mohyehia99/api-gateway:0.0.2
          ports:
            - containerPort: 8082
              protocol: TCP
          readinessProbe:
            httpGet:
              port: 8082
              path: /actuator/health
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: 8082
              path: /actuator/health
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - sleep 10
