k8s/api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30005
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway-ctr
          image: mohyehia99/api-gateway:0.0.1
          ports:
            - containerPort: 8082
              protocol: TCP
