k8s/consul.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  selector:
    app: consul
  ports:
    - protocol: TCP
      port: 8500
      targetPort: 8500
      nodePort: 30000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul-ctr
          image: hashicorp/consul:latest
          ports:
            - containerPort: 8500
              protocol: TCP
          volumeMounts:
            - mountPath: /consul/data
              name: consul-vol
      volumes:
        - name: consul-vol
          persistentVolumeClaim:
            claimName: consul-pvc
