k8s/licence-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: license-service
spec:
  selector:
    app: license-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: license-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: license-service
  template:
    metadata:
      labels:
        app: license-service
    spec:
      containers:
        - name: license-service-ctr
          image: mohyehia99/licence-service:0.0.1
          ports:
            - containerPort: 8083
              protocol: TCP
