k8s/organization-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: organization-service
spec:
  selector:
    app: organization-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization-service
  template:
    metadata:
      labels:
        app: organization-service
    spec:
      containers:
        - name: organization-service-ctr
          image: mohyehia99/organization-service:0.0.1
          ports:
            - containerPort: 8081
              protocol: TCP
