k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  clusterIP: None
  selector:
    app: postgres-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-sts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  serviceName: 'postgres-db'
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-ctr
          image: postgres:16.2
          volumeMounts:
            - mountPath: /data/db
              name: postgres-vol
  volumeClaimTemplates:
    - metadata:
        name: postgres-vol
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
